{
  "sourceLanguage" : "en",
  "strings" : {
    "error.emptypassword" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password cannot be empty."
          }
        }
      }
    },
    "error.formatpassword" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password must be a combination of uppercase, lowercase and numbers."
          }
        }
      }
    },
    "error.generic" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "An error occurred, please restart the app."
          }
        }
      }
    },
    "error.license" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "A valid type of pilot license should be inserted."
          }
        }
      }
    },
    "error.shortpassword" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password must be at least 12 characters."
          }
        }
      }
    },
    "error.urlnotfound" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The url was not found."
          }
        }
      }
    },
    "error.username" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Must contain at least one non-whitespace character."
          }
        }
      }
    },
    "error.usernotfound" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No user registered"
          }
        }
      }
    },
    "error.userpassword" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password should not contains username."
          }
        }
      }
    },
    "error.verificationpassword" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Must be identical to the password."
          }
        }
      }
    },
    "label.allowedaircrafts" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your allowed aircrafts are:"
          }
        }
      }
    },
    "label.confirmation" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirmation"
          }
        }
      }
    },
    "label.format.license" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your license is %@"
          }
        }
      }
    },
    "label.format.userregistered" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ is registered"
          }
        }
      }
    },
    "label.format.welcome" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Welcome %@!"
          }
        }
      }
    },
    "label.licensetype" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pilot license type:"
          }
        }
      }
    },
    "label.loading" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Loading..."
          }
        }
      }
    },
    "label.logout" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logout"
          }
        }
      }
    },
    "label.name" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
        }
      }
    },
    "label.password" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password"
          }
        }
      }
    },
    "label.passwordverification" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password verification"
          }
        }
      }
    },
    "label.register" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Register"
          }
        }
      }
    }
  },
  "version" : "1.0"
}